--- a/src/Shopsys/ShopBundle/Resources/translations/messages.sk.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.sk.po
@@ -46,9 +46,6 @@ msgstr "-- Vyberte pozíciu článku --"
 msgid "-- Vyberte přenos --"
 msgstr "- Vyberte prenos -"
 
-msgid "00421/908767330"
-msgstr ""
-
 msgid "1 - čtverec"
 msgstr "1 - štvorec"
 
@@ -81,6 +78,9 @@ msgstr ""
 
 msgid "6 - velký obdelník na šířku"
 msgstr "6 - veľký obdĺžnik na šírku"
+
+msgid "702 00 Ostrava"
+msgstr ""
 
 msgid "831 04 Bratislava"
 msgstr "831 04 Bratislava"
@@ -1042,6 +1042,9 @@ msgstr "IČ: 25618601, DIČ: CZ25618601"
 msgid "IČ: 26052679, DIČ: CZ26052679"
 msgstr "IČ: 26052679, DIČ: CZ26052679"
 
+msgid "IČ: 27790487, DIČ: CZ27790487"
+msgstr ""
+
 msgid "IČO: 51704501, IČ DPH: SK2120761621"
 msgstr "IČO: 51704501, IČ DPH: SK2120761621"
 
@@ -1134,6 +1137,12 @@ msgstr "Kliknutím na tlačidlo Odoslať objednávku"
 
 msgid "Klikněte zde pro zopakování úhrady objednávky"
 msgstr "Kliknite tu pre zopakovanie úhrady objednávky"
+
+msgid "Koksární 1096/10"
+msgstr ""
+
+msgid "Koksární 1096/10, 702 00 Ostrava"
+msgstr ""
 
 msgid "Kolega Novák má dobrý češtin. Pošlete mu tu klíčenku taky. Můžu potvrdit výše uvedené recenze. Bunda je opravdu kvalitní, dobře se nosí a i po týdnu jsem necítil pot ani hlínu."
 msgstr "Kolega Novák má dobrú češtinu. Pošlite mu tiež tú kľúčenku. Môžem potvrdiť vyššie uvedené recenzie. Bunda je naozaj kvalitná, dobre sa nosí a aj po týždni som necítil pot ani hlinu."
@@ -1308,9 +1317,6 @@ msgstr "Máte pravdu a veľmi dobrý postreh! Masívny zips odkazuje na perovky 
 
 msgid "Máte slevový kód?"
 msgstr "Máš zľavový kód?"
-
-msgid "Městečko - Nespeky č.p. 75"
-msgstr ""
 
 msgid "Město"
 msgstr "Mesto"
@@ -1831,6 +1837,9 @@ msgstr "Pomáhajte s nami"
 msgid "Pomáháme"
 msgstr "Pomáháme"
 
+msgid "Pondělí až pátek 8:00 – 16:00"
+msgstr "Pondelok až piatok 8:00 - 16:00"
+
 msgid "Pondělí až pátek 9–15 hod"
 msgstr "Pondelok až piatok 9-15 hod"
 
@@ -2290,6 +2299,9 @@ msgstr "Shopsys Framework"
 msgid "Shopsys magazín"
 msgstr ""
 
+msgid "Shopsys s.r.o."
+msgstr ""
+
 msgid "Silnější než kdy předtím..."
 msgstr "Silnejší ako kedykoľvek predtým ..."
 
@@ -2392,6 +2404,9 @@ msgstr "Špeciálna ponuka"
 msgid "Specialisti na běh"
 msgstr ""
 
+msgid "Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě."
+msgstr "Spisová značka C 51890 vedená u registrového súdu v Ostrave."
+
 msgid "Spoločnosť zapísaná v obchodnom registri Okresného súdu Bratislava I, oddiel Sro, vložka č. 128258/B."
 msgstr "Spoločnosť zapísaná v obchodnom registri Okresného súdu Bratislava I, oddiel Sro, vložka č. 128258/B."
 
@@ -2463,9 +2478,6 @@ msgstr ""
 
 msgid "Tax number"
 msgstr "IČ DPH"
-
-msgid "Tel"
-msgstr ""
 
 msgid "Telefon"
 msgstr "Telefón"
@@ -3154,9 +3166,6 @@ msgstr "bez DPH"
 msgid "expediční oblečení"
 msgstr "expedičné oblečenie"
 
-msgid "fax: +420 317 712 499"
-msgstr ""
-
 msgid "from"
 msgstr "z"
 
@@ -3168,6 +3177,9 @@ msgstr "história objednávok,"
 
 msgid "in upper menu"
 msgstr "v hornom menu"
+
+msgid "info@shopsys.com"
+msgstr ""
 
 msgid "možnost získat"
 msgstr "možnosť získať"
@@ -3205,14 +3217,8 @@ msgstr "o nákupe"
 msgid "o nás"
 msgstr "o nás"
 
-msgid "obchod@bushman.sk"
-msgstr ""
-
 msgid "obchodními podmínkami"
 msgstr "obchodnými podmienkami"
-
-msgid "office@bushman.cz"
-msgstr ""
 
 msgid "on stock"
 msgstr "na sklade"
@@ -3259,7 +3265,7 @@ msgstr "súhlasím s"
 msgid "stores"
 msgstr "predajne"
 
-msgid "tel.: +420 317 712 400"
+msgid "tel.: +420 595 177 177"
 msgstr ""
 
 msgid "tento text přesně vystihnul atmosféru nové strategie."
