--- a/src/Shopsys/ShopBundle/Resources/translations/messages.de.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.de.po
@@ -43,9 +43,6 @@ msgstr "-- Artikelposition wählen --"
 msgid "-- Vyberte přenos --"
 msgstr "--Transfer auswählen--"
 
-msgid "00421/908767330"
-msgstr ""
-
 msgid "1 - čtverec"
 msgstr "1 - Quadrat"
 
@@ -87,6 +84,9 @@ msgstr ""
 
 msgid "6 - velký obdelník na šířku"
 msgstr "6 - grosses Rechteck landschaft"
+
+msgid "702 00 Ostrava"
+msgstr ""
 
 msgid "831 04 Bratislava"
 msgstr "831 04 Bratislava"
@@ -1018,6 +1018,9 @@ msgstr "IČ: 25618601, DIČ: CZ25618601"
 msgid "IČ: 26052679, DIČ: CZ26052679"
 msgstr "IČ: 26052679, DIČ: CZ26052679"
 
+msgid "IČ: 27790487, DIČ: CZ27790487"
+msgstr "IR: 27790487, USt-IdNr: CZ27790487"
+
 msgid "IČO: 51704501, IČ DPH: SK2120761621"
 msgstr "IČO: 51704501, IČ DPH: SK2120761621"
 
@@ -1112,6 +1115,12 @@ msgid "Kliknutím na tlačítko Odeslat objednávku"
 msgstr "Klicke auf \"Bestellung abschicken\""
 
 msgid "Klikněte zde pro zopakování úhrady objednávky"
+msgstr ""
+
+msgid "Koksární 1096/10"
+msgstr ""
+
+msgid "Koksární 1096/10, 702 00 Ostrava"
 msgstr ""
 
 msgid "Kolega Novák má dobrý češtin. Pošlete mu tu klíčenku taky. Můžu potvrdit výše uvedené recenze. Bunda je opravdu kvalitní, dobře se nosí a i po týdnu jsem necítil pot ani hlínu."
@@ -1822,6 +1831,9 @@ msgstr "Hilf mit"
 msgid "Pomáháme"
 msgstr "Wir helfen"
 
+msgid "Pondělí až pátek 8:00 – 16:00"
+msgstr "Montag bis Freitag von 08:00 bis 16:00 Uhr"
+
 msgid "Pondělí až pátek 9–15 hod"
 msgstr "Montag bis Freitag von 9 bis 15 Uhr"
 
@@ -2281,6 +2293,9 @@ msgstr "Shopsys Framework"
 msgid "Shopsys magazín"
 msgstr ""
 
+msgid "Shopsys s.r.o."
+msgstr ""
+
 msgid "Silnější než kdy předtím..."
 msgstr "Stärker als je zuvor ..."
 
@@ -2380,6 +2395,9 @@ msgstr "Sonderangebot"
 msgid "Specialisti na běh"
 msgstr ""
 
+msgid "Spisová značka C 51890 vedená u rejstříkového soudu v Ostravě."
+msgstr "Aktenzeichen C 51890, geführt vom Registergericht in Ostrava."
+
 msgid "Spoločnosť zapísaná v obchodnom registri Okresného súdu Bratislava I, oddiel Sro, vložka č. 128258/B."
 msgstr "Spoločnosť zapísaná v obchodnom registri Okresného súdu Bratislava I, oddiel Sro, vložka č. 128258/B."
 
@@ -2451,9 +2469,6 @@ msgstr "TOPTRANS"
 
 msgid "Tax number"
 msgstr "Steuernummer"
-
-msgid "Tel"
-msgstr ""
 
 msgid "Telefon"
 msgstr "Telefon"
@@ -3163,6 +3178,9 @@ msgstr "in der Fußzeile"
 msgid "in upper menu"
 msgstr "im oberen Menü"
 
+msgid "info@shopsys.com"
+msgstr ""
+
 msgid "možnost získat"
 msgstr "Chance zu bekommen"
 
@@ -3198,9 +3216,6 @@ msgstr "über den Kauf"
 
 msgid "o nás"
 msgstr "über uns"
-
-msgid "obchod@bushman.sk"
-msgstr ""
 
 msgid "obchodními podmínkami"
 msgstr "Geschäftsbedingungen"
@@ -3258,6 +3273,9 @@ msgstr "Geschäfte"
 
 msgid "tel.: +420 317 712 400"
 msgstr "Tel.: +420 317 712 400"
+
+msgid "tel.: +420 595 177 177"
+msgstr ""
 
 msgid "tento text přesně vystihnul atmosféru nové strategie."
 msgstr "Dieser Text fasst die Atmosphäre der neuen Strategie genau zusammen."
