[BG-6630] Change link at homepage
- Vyzkoušení zdarma na prodejně v Praze -> Vyzkoušení zdarma na naší prodejně
- Changed link to stores page

--- a/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
@@ -2629,7 +2629,7 @@ msgstr ""
 msgid "Využijte"
 msgstr "Využij"
 
-msgid "Vyzkoušení zdarma na <a class=\"list-benefits__item__text__link js-not-implemented-yet\" href=\"\">prodejně v Praze</a>"
+msgid "Vyzkoušení zdarma na <a class=\"list-benefits__item__text__link\" href=\"%url%\">naší prodejně</a>"
 msgstr ""
 
 msgid "Váš e-mail je na e-shopu registrován."
