--- a/src/Shopsys/ShopBundle/Resources/translations/validators.en.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/validators.en.po
@@ -10,13 +10,13 @@ msgstr ""
 msgid "Company name cannot be longer than {{ limit }} characters"
 msgstr ""
 
-msgid "Email cannot be longer then {{ limit }} characters"
+msgid "Email cannot be longer than {{ limit }} characters"
 msgstr ""
 
 msgid "Externí ID nesmí být delší než {{ limit }} znaků"
 msgstr ""
 
-msgid "First name cannot be longer then {{ limit }} characters"
+msgid "First name cannot be longer than {{ limit }} characters"
 msgstr ""
 
 msgid "Google Maps link cannot be longer than {{ limit }} characters"
@@ -31,7 +31,7 @@ msgstr ""
 msgid "Hodnota nemůže byt delší než {{ limit }} znaků"
 msgstr ""
 
-msgid "Identification number cannot be longer then {{ limit }} characters"
+msgid "Identification number cannot be longer than {{ limit }} characters"
 msgstr ""
 
 msgid "Image can be only in JPG, GIF or PNG format"
@@ -55,13 +55,13 @@ msgstr ""
 msgid "Opening hours cannot be longer than {{ limit }} characters"
 msgstr ""
 
-msgid "Password cannot be longer then {{ limit }} characters"
-msgstr ""
-
 msgid "Password cannot be same as e-mail"
 msgstr ""
 
 msgid "Password cannot be same as part of e-mail before at sign"
+msgstr ""
+
+msgid "Password must be longer than {{ limit }} characters"
 msgstr ""
 
 msgid "Passwords do not match"
